--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="./stayle.css">
 <link rel="stylesheet" href="./icon/all.min.css">
-    <title>Baraa</title>
+    <title>PETER</title>
 </head>
 <body>
     <div class="c"></div>
@@ -14,13 +14,13 @@
     <div class="b"></div>
 
 <center><img src="./img/b.jpg" alt="" srcset="" class="me">
-<h2 class="about-h2">Baraa Alsher</h2>
+<h2 class="about-h2">PETER ATEF</h2>
 <h4 class="about-h4">Web devloper</h4>
 <div class="allicon">
 <a href="https://www.facebook.com/barysher/"><i id="icon" class="fab fa-facebook-f"></i></a>
-<a href="https://www.instagram.com/barysher/"><i id="icon" class="fab fa-instagram"></i></a>
-<a href="https://wa.link/20uyk2"><i id="icon" class="fab fa-whatsapp"></i></a>
-<a href="https://github.com/baraasher "><i id="icon" class="fab fa-github"></i></a>
+<a href="https://www.instagram.com/invites/contact/?i=wftc96vqv53x&utm_content=hpmpnzz/"><i id="icon" class="fab fa-instagram"></i></a>
+<a href="https://wa.me/message/SPA7NZIJBZAQC1"><i id="icon" class="fab fa-whatsapp"></i></a>
+<a href="https://github.com/PETERMANGE "><i id="icon" class="fab fa-github"></i></a>
 </div>
 <button>Download Cv</button>
 
